[add]:cors setup with docker angular